ndtech-k8s-cluster/jaackd/jaackd-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaackd-com
  namespace: jaackd
  annotations:
    external-dns.alpha.kubernetes.io/hostname: jaackd.com
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - secretName: letsencrypt
      hosts:
        - jaackd.com
  # rules:
  #   - host: jaackd.com
  #     http:
  #       paths:
  #         - backend:
  #            service:
  #             name: jaackd-website
  #             port:
  #               number: 80
  #           path: /
  #           pathType: ImplementationSpecific
